welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: recursive variable c needs type
		var c = T(c+2);
                          ^